// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bend/crossing metrics > Boolean Algebra 1`] = `
{
  "H": 255,
  "bends": 12,
  "bent": 6,
  "crossings": 2,
  "straight": 4,
  "wires": 10,
}
`;

exports[`Bend/crossing metrics > Breaker Failure (SEL-751A) 1`] = `
{
  "H": 350,
  "bends": 8,
  "bent": 4,
  "crossings": 0,
  "straight": 6,
  "wires": 10,
}
`;

exports[`Bend/crossing metrics > Combined Logic (CBFPS) 1`] = `
{
  "H": 315,
  "bends": 14,
  "bent": 7,
  "crossings": 0,
  "straight": 1,
  "wires": 8,
}
`;

exports[`Bend/crossing metrics > Combined Options 1`] = `
{
  "H": 320,
  "bends": 12,
  "bent": 6,
  "crossings": 5,
  "straight": 1,
  "wires": 7,
}
`;

exports[`Bend/crossing metrics > Complex Protection (SEL) 1`] = `
{
  "H": 1090,
  "bends": 20,
  "bent": 10,
  "crossings": 0,
  "straight": 14,
  "wires": 24,
}
`;

exports[`Bend/crossing metrics > Complex Protection 1`] = `
{
  "H": 315,
  "bends": 8,
  "bent": 4,
  "crossings": 0,
  "straight": 4,
  "wires": 8,
}
`;

exports[`Bend/crossing metrics > Differential Protection 1`] = `
{
  "H": 305,
  "bends": 4,
  "bent": 2,
  "crossings": 0,
  "straight": 5,
  "wires": 7,
}
`;

exports[`Bend/crossing metrics > Generic Block (FB) 1`] = `
{
  "H": 190,
  "bends": 0,
  "bent": 0,
  "crossings": 0,
  "straight": 6,
  "wires": 6,
}
`;

exports[`Bend/crossing metrics > Input Bars 1`] = `
{
  "H": 270,
  "bends": 10,
  "bent": 5,
  "crossings": 2,
  "straight": 1,
  "wires": 6,
}
`;

exports[`Bend/crossing metrics > Interlocking Q01 Close 1`] = `
{
  "H": 755,
  "bends": 20,
  "bent": 10,
  "crossings": 0,
  "straight": 5,
  "wires": 15,
}
`;

exports[`Bend/crossing metrics > Inversion Bubbles 1`] = `
{
  "H": 355,
  "bends": 12,
  "bent": 6,
  "crossings": 4,
  "straight": 3,
  "wires": 9,
}
`;

exports[`Bend/crossing metrics > Labelled Gates 1`] = `
{
  "H": 520,
  "bends": 10,
  "bent": 5,
  "crossings": 0,
  "straight": 9,
  "wires": 14,
}
`;

exports[`Bend/crossing metrics > Mixed Logic 1`] = `
{
  "H": 430,
  "bends": 12,
  "bent": 6,
  "crossings": 0,
  "straight": 6,
  "wires": 12,
}
`;

exports[`Bend/crossing metrics > Motor Control Circuit 1`] = `
{
  "H": 325,
  "bends": 12,
  "bent": 6,
  "crossings": 3,
  "straight": 3,
  "wires": 9,
}
`;

exports[`Bend/crossing metrics > NOT Gate 1`] = `
{
  "H": 90,
  "bends": 0,
  "bent": 0,
  "crossings": 0,
  "straight": 2,
  "wires": 2,
}
`;

exports[`Bend/crossing metrics > Named Gates 1`] = `
{
  "H": 390,
  "bends": 4,
  "bent": 2,
  "crossings": 0,
  "straight": 8,
  "wires": 10,
}
`;

exports[`Bend/crossing metrics > Nested NOT 1`] = `
{
  "H": 90,
  "bends": 0,
  "bent": 0,
  "crossings": 0,
  "straight": 3,
  "wires": 3,
}
`;

exports[`Bend/crossing metrics > Overcurrent Protection 1`] = `
{
  "H": 310,
  "bends": 8,
  "bent": 4,
  "crossings": 0,
  "straight": 3,
  "wires": 7,
}
`;

exports[`Bend/crossing metrics > SEL Function Blocks 1`] = `
{
  "H": 355,
  "bends": 2,
  "bent": 1,
  "crossings": 0,
  "straight": 9,
  "wires": 10,
}
`;

exports[`Bend/crossing metrics > Shared Intermediates 1`] = `
{
  "H": 460,
  "bends": 12,
  "bent": 5,
  "crossings": 3,
  "straight": 7,
  "wires": 12,
}
`;

exports[`Bend/crossing metrics > Simple AND Gate 1`] = `
{
  "H": 135,
  "bends": 0,
  "bent": 0,
  "crossings": 0,
  "straight": 3,
  "wires": 3,
}
`;

exports[`Bend/crossing metrics > Simple OR Gate 1`] = `
{
  "H": 135,
  "bends": 0,
  "bent": 0,
  "crossings": 0,
  "straight": 3,
  "wires": 3,
}
`;

exports[`Bend/crossing metrics > Square Ports 1`] = `
{
  "H": 150,
  "bends": 0,
  "bent": 0,
  "crossings": 0,
  "straight": 3,
  "wires": 3,
}
`;

exports[`Bend/crossing metrics > Three-Input AND 1`] = `
{
  "H": 170,
  "bends": 0,
  "bent": 0,
  "crossings": 0,
  "straight": 4,
  "wires": 4,
}
`;

exports[`Bend/crossing metrics > Trip Logic 1`] = `
{
  "H": 315,
  "bends": 8,
  "bent": 4,
  "crossings": 0,
  "straight": 4,
  "wires": 8,
}
`;

exports[`Bend/crossing metrics > Triple OR 1`] = `
{
  "H": 170,
  "bends": 0,
  "bent": 0,
  "crossings": 0,
  "straight": 4,
  "wires": 4,
}
`;
